<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/footballbackground"
    tools:context=".MenuActivity" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Blue"
        android:text="@string/menuTitle"
        android:textSize="50sp" />
    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/btn_default"
        android:text="@string/playButton"
        android:textSize="20sp" />
    <Button
        android:id="@+id/playCompButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playButton"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/btn_default"
        android:text="@string/playCompButton"
        android:textSize="20sp" />
    <Button
        android:id="@+id/player1ChooseTeamButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playCompButton"
        android:layout_alignParentLeft="true"
        android:background="@android:drawable/btn_default"
        android:text="@string/player1ChooseTeamButton"
        android:textSize="20sp" />
    <Button
        android:id="@+id/player2ChooseTeamButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playCompButton"
        android:layout_alignParentRight="true"
        android:background="@android:drawable/btn_default"
        android:text="@string/player2ChooseTeamButton"
        android:textSize="20sp" />
    <ImageView 
        android:contentDescription="Player1ChooseTeamImage"
        android:id="@+id/player1ChooseTeamImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player1ChooseTeamButton"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/player1ChooseTeamButton"
        android:background="@drawable/x"/>
    <ImageView 
        android:contentDescription="Player2ChooseTeamImage"
        android:id="@+id/player2ChooseTeamImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player2ChooseTeamButton"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/player2ChooseTeamButton"
        android:background="@drawable/o"/>
    <RadioGroup 
        android:id="@+id/radioBtnGroup"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_centerHorizontal="true" 
        android:layout_below="@id/player2ChooseTeamImage"
        android:layout_marginTop="10dp">
        <RadioButton 
            android:id="@+id/rd_btn_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:checked="true"
            android:textSize="15sp"
            android:text="@string/easy"
            android:background="@android:drawable/btn_default"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton 
            android:id="@+id/rd_btn_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="15sp"
            android:text="@string/medium"
            android:background="@android:drawable/btn_default"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton 
            android:id="@+id/rd_btn_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="15sp"
            android:text="@string/hard"
            android:background="@android:drawable/btn_default"
            android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
	<Button
	    android:id="@+id/aboutButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:textSize="20sp"
	    android:background="@android:drawable/btn_default"
	    android:text="@string/aboutBtn" />
</RelativeLayout>