

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GameActivity" 
    android:orientation="vertical" 
    android:weightSum="4.7">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1"
        android:orientation="horizontal"
        android:weightSum="3.2" >
    	<Button
	        android:id="@+id/button0"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
			android:background="@drawable/blank" />
    	<View
    	    android:layout_width="0dp"
    	    android:layout_height="match_parent"
    		android:layout_weight=".1" />
    	<Button
	        android:id="@+id/button1"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
			android:background="@drawable/blank" />
    	<View
    	    android:layout_width="0dp"
    	    android:layout_height="match_parent"
    		android:layout_weight=".1" />
    	<Button
	        android:id="@+id/button2"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
			android:background="@drawable/blank" />
    </LinearLayout>
    <View
        android:layout_weight=".1"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1"
        android:orientation="horizontal"
        android:weightSum="3.2" >
    	<Button
	        android:id="@+id/button3"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
			android:background="@drawable/blank" />
    	<View
    	    android:layout_width="0dp"
    	    android:layout_height="match_parent"
    		android:layout_weight=".1" />
    	<Button
	        android:id="@+id/button4"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
			android:background="@drawable/blank" />
       <View
    	    android:layout_width="0dp"
    	    android:layout_height="match_parent"
    		android:layout_weight=".1" />
    	<Button
	        android:id="@+id/button5"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
			android:background="@drawable/blank" />
    </LinearLayout>
    <View
        android:layout_weight=".1"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1"
        android:orientation="horizontal"
        android:weightSum="3.2" >
    	<Button
	        android:id="@+id/button6"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
			android:background="@drawable/blank" />
    	<View
    	    android:layout_width="0dp"
    	    android:layout_height="match_parent"
    		android:layout_weight=".1" />
    	<Button
	        android:id="@+id/button7"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
			android:background="@drawable/blank" />
    	<View
    	    android:layout_width="0dp"
    	    android:layout_height="match_parent"
    		android:layout_weight=".1" />
    	<Button
	        android:id="@+id/button8"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
			android:background="@drawable/blank" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:weightSum="3">
    	<TextView
            android:id="@+id/playerWins"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" 
            android:textSize="20sp"
            android:gravity="center" 
            android:text="@string/playerWins" />"
    	<TextView
            android:id="@+id/textView"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/ties" />
    	<TextView
            android:id="@+id/computerWins"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" 
            android:textSize="20sp"
            android:gravity="center" 
            android:text="@string/computerWins" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1"
        android:orientation="horizontal"
        android:weightSum="3.2" >
    	<Button
	        android:id="@+id/reset"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
	        android:textSize="20sp"
			android:text="@string/resetText" />
    	<View
    	    android:layout_width="0dp"
    	    android:layout_height="match_parent"
    		android:layout_weight=".1" />
    	<Button
	        android:id="@+id/chooseTeam"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
	        android:textSize="20sp"
			android:text="@string/chooseTeamText" />
    	<View
    	    android:layout_width="0dp"
    	    android:layout_height="match_parent"
    		android:layout_weight=".1" />
    	<Button
	        android:id="@+id/settings"
	        android:layout_width="0dp"
	        android:layout_height = "match_parent"
	        android:layout_weight="1"
	        android:textSize="20sp"
			android:text="@string/settingsText" />
    </LinearLayout>
</LinearLayout>
